<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/style_formulario_usuario">

        <ImageView
            android:id="@+id/ivImagen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/txt_imagen_usuario"
            android:src="@drawable/editar_usuario_press_100" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_tv_usuario"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvRol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_tv_rol"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEstadoUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_tv_estado_usuario"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="?android:attr/listDivider" />

</LinearLayout>