<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@drawable/style_formulario_usuario"
    tools:context=".CrearUsuarioActivity"
    tools:showIn="@layout/activity_crear_usuario">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTituloFormularioUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/creando_nuevo_usuario"
                android:textAllCaps="true"
                android:textColor="#0669B8"
                android:textColorHint="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                app:errorEnabled="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@drawable/style_edittext_form_usuario"
                    android:drawableLeft="@drawable/ic_user"
                    android:ems="10"
                    android:hint="@string/usuario"
                    android:inputType="textPersonName|textCapSentences"
                    android:textColor="#000000"
                    android:textColorHint="#8D000000" />

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spinnerRol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/style_edittext_form_usuario"
                android:spinnerMode="dropdown" />

            <Switch
                android:id="@+id/switchUsuarioActivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:checked="true"
                android:onClick="onClickSwitches"
                android:text="@string/usuario_activo"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switchTipoUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="onClickSwitches"
                android:text="@string/es_usuario_ldap"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:errorEnabled="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@drawable/style_edittext_form_usuario"
                    android:drawableLeft="@drawable/ic_password"
                    android:ems="10"
                    android:hint="@string/contrasena"
                    android:inputType="textPassword"
                    android:textColor="#000000"
                    android:textColorHint="#8D000000" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnAgregar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_button_login"
                android:onClick="onClickcrearUsuario"
                android:text="@string/crear_usuario"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/style_btn_cancelar"
                android:onClick="cancelar"
                android:text="@string/cancelar"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtAvisoContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/text_txt_aviso_contra"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="invisible" />

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>