<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SeguimientoActivity"
    tools:showIn="@layout/activity_seguimiento">

    <ScrollView
        android:id="@+id/scrollViewSeguimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/lyGeneralSeguimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/lblApellidos"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/lblApellidos"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txtApellidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/style_edittext" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="27dp">

                <TextView
                    android:id="@+id/lblNombres"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/lblNombres"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/txtNombres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/style_edittext" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="54dp">

                <TextView
                    android:id="@+id/lblEdad"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/lblEdad"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/txtEdad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/style_edittext" />
            </LinearLayout>

            <TextView
                android:id="@+id/lblFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="6dp"
                android:gravity="center"
                android:text="Fecha"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="13dp"
                android:layout_marginRight="6dp"
                android:gravity="center"
                android:text=""
                android:textAllCaps="true"
                android:textColor="#0669B8"
                android:textColorHint="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtComunicado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="13dp"
                android:layout_marginRight="6dp"
                android:gravity="center"
                android:text="Recuerde que se permite un registro diario por cada familiar."
                android:textAllCaps="true"
                android:textColor="#6B6B78"
                android:textColorHint="#FFFFFF"
                android:textSize="11sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/lySeguimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtLySeguimiento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="13dp"
                    android:layout_marginRight="6dp"
                    android:gravity="start"
                    android:text="@string/seguimiento2"
                    android:textAllCaps="true"
                    android:textColor="#0669B8"
                    android:textColorHint="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblFrecResp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/lblFrecResp"
                    android:textColor="#000000" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputFrecRespiratoria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    app:counterEnabled="true"
                    app:errorEnabled="true">

                    <EditText
                        android:id="@+id/etFrecResp"
                        android:layout_width="210dp"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/str_pregunta_1"
                        android:inputType="number"
                        android:maxLength="2"
                        android:textColor="#000000"
                        android:textColorHint="#8D000000" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/lblTemperatura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/lblTemperatura"
                    android:textColor="#000000" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputTemperatura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    app:counterEnabled="true"
                    app:errorEnabled="true">

                    <EditText
                        android:id="@+id/etTempCorp"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/str_pregunta_2"
                        android:inputType="numberDecimal"
                        android:maxLength="5"
                        android:textColor="#000000"
                        android:textColorHint="#8D000000" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/lblFrecCardiaca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/lblFrecCardiaca"
                    android:textColor="#000000" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputFrecCardiaca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    app:counterEnabled="true"
                    app:errorEnabled="true">

                    <EditText
                        android:id="@+id/etFrecCard"
                        android:layout_width="210dp"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/str_pregunta3"
                        android:inputType="number"
                        android:maxLength="3"
                        android:textColor="#000000"
                        android:textColorHint="#8D000000" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/lblSatOxigeno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/lblSatOxigeno"
                    android:textColor="#000000" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputSatOxigeno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    app:errorEnabled="true">

                    <EditText

                        android:id="@+id/etSatOxig"
                        android:layout_width="210dp"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/str_pregunta3"
                        android:inputType="number"
                        android:maxLength="3"
                        android:textColor="#000000"
                        android:textColorHint="#8D000000" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/lblDifRespirar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/lblDifRespirar"
                    android:textColor="#000000" />

                <RadioGroup
                    android:id="@+id/rgDifRespirar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbSiDifRespirar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rbSi" />

                    <RadioButton
                        android:id="@+id/rbNoDifRespirar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/rbNo" />
                </RadioGroup>

                <TextView
                    android:id="@+id/lblFatiga"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/lblFatiga"
                    android:textColor="#000000" />

                <RadioGroup
                    android:id="@+id/rgFatiga"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbSiFatiga"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rbSi" />

                    <RadioButton
                        android:id="@+id/rbNoFatiga"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/rbNo" />
                </RadioGroup>

                <TextView
                    android:id="@+id/lblDifHablar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/lblDifHablar"
                    android:textColor="#000000" />

                <RadioGroup
                    android:id="@+id/rgDifHablar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbSiDifHablar"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/rbSi" />

                    <RadioButton
                        android:id="@+id/rbNoDifHablar"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:text="@string/rbNo" />
                </RadioGroup>

                <TextView
                    android:id="@+id/lblDelirio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/lblDelirio"
                    android:textColor="#000000" />

                <RadioGroup
                    android:id="@+id/rgDelirio"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbSiDelirio"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/rbSi" />

                    <RadioButton
                        android:id="@+id/rbNoDelirio"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:text="@string/rbNo" />
                </RadioGroup>

                <Button
                    android:id="@+id/btnRegistrarSeguimiento"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:onClick="registrarSeguimiento"
                    android:text="@string/str_registrar" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>